// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flex component matches snapshot (default props) 1`] = `
<div
  className="flex flex--alignStretch flex--row"
  data-test=""
>
  <FlexItem
    dataTest=""
    shrink={false}
  />
</div>
`;

exports[`Flex component matches snapshot (set all props) 1`] = `
<div
  className="flex flex--alignEnd flex--column flex--column--reverse flex--justifySpaceBetween flex--wrap flex--noGutters foo"
  data-test=""
>
  <FlexItem
    dataTest=""
    shrink={false}
  />
</div>
`;
